2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in [C_DEFINES]: Remove -D_POSIX_C_SOURCE=200809L and
	-D_SVID_SOURCE and add -D_ISOC99_SOURCE.
	[CXX_DEFINES]: Remove -D_POSIX_C_SOURCE=200809L and add
	-D_ISOC99_SOURCE.
	* sysdeps/bid/symbol-hacks.h: BID symbol hacks to avoid internal PLT
	calls.
	* sysdeps/dpd/symbol-hacks.h: Fix symbol definitions.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* include/dfpacc.h: Add hidden_proto_enc for all symbols.
	* base-math/extendddtf.c: Add hidden_def.
	* base-math/extendsdtf.c: Likewise.
	* base-math/extendsfsd.c: Likewise.
	* base-math/extendsfsd.c: Likewise.
	* base-math/truncddsf.c: Likewise.
	* base-math/truncsdsf.c: Likewise.
	* base-math/trunctdsf.c: Likewise.
	* base-math/trunctfsd.c: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/adddd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/addsd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/addtd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/divdd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/divsd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/divtd3.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/eqdd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/eqsd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/eqtd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/extendddtd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/extendsddd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/extendsdtd2.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixdddi.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixddsi.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixsddi.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixsdsi.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixtddi.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixtdsi.S:  Likewise.
	* sysdeps/powerpc/powerpc32/power6/fpu/fixunsdddi.S: Likewise.