@@ -7,6 +7,10 @@
 	* sysdeps/bid/symbol-hacks.h: BID symbol hacks to avoid internal PLT
 	calls.
 	* sysdeps/dpd/symbol-hacks.h: Fix symbol definitions.
+	* sysdeps/soft-dfp/bid/numdigits.h (left_justifyd32): Fix to handle
+	NaN.
+	(left_justifyd64): Likewise.
+	(left_justifyd128): Likewise.
 
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
